# expand-array-rust-macro

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
src/: arrr.rs  input.rs  lib.rs
src/bitify_impl/: flags.rs  main.rs  mod.rs
src/parse/: arr.rs  builder.rs  converter.rs  definition.rs  mod.rs  tokenizer.rs  traits.rs  types.rs
src/types/: array.rs  mod.rs  rust_type.rs
tests/: test_expand_array.rs
