[package]
name = "expand_array"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["proc-macro"]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.61", features = ["full", "extra-traits"] }
trait-set = "0.3.0"
