[package]
name = "expand_array"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Macro to convert a static array to a fixed-size array"
readme = "README.md"
repository = "https://github.com/acovaci/expand-array-rust-macro"
keywords = [
    "macro",
    "array",
    "static",
    "dll",
    "global",
    "fixed",
    "size",
    "expand",
    "proc-macro",
    "proc_macro_2",
    "syn",
    "quote",
]
categories = ["development-tools::ffi", "rust-patterns"]
exclude = ["tests"]


[lib]
crate-type = ["proc-macro"]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.61", features = ["full"] }
