[package]
name = "expand_array"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
description = "Macro to convert a static array to a fixed-size array"
readme = "README.md"
repository = "https://github.com/acovaci/expand-array-rust-macro"
keywords = ["macro", "array", "static", "fixed", "size"]
categories = ["development-tools::ffi", "rust-patterns"]
exclude = ["tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
